--- a/css/styles.css
+++ b/css/styles.css
@@ -192,6 +192,30 @@ img {
     width: 100%;
 }
 
+.navbar__menu .login-container button {
+    float: right;
+    padding: 16px 10px;
+    margin-top: 8px;
+    margin-right: 16px;
+    background-color: #feef3c;
+    color: rgb(0, 0, 0);
+    font-size: 15px;
+    border: none;
+    border-radius: 17px;
+    cursor: pointer;
+}
+
+.navbar__menu .login-container button:hover {
+    background-color: rgb(15, 16, 15);
+    color: white;
+}
+
+@media screen and (max-width: 600px) {
+    .navbar__menu .login-container {
+        float: none;
+    }
+}
+
 
 /* .button {
   display: flex;
