--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,7 @@
 
 body,
 html {
-    background-color: #1B1B1C;
+    background-color: #1b1b1c;
     font-family: 'Righteous';
     max-width: 100%;
     overflow-x: hidden;
@@ -134,7 +134,6 @@ img {
     width: 100%;
     z-index: 999;
     padding: 40px 70px 70px 70px;
-    overflow: hidden;
 }
 
 .navbar__container {
@@ -210,9 +209,10 @@ img {
     color: white;
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 768px) {
     .navbar__menu .login-container {
-        float: none;
+        justify-content: center;
+        align-items: center;
     }
 }
 
@@ -382,7 +382,7 @@ img {
         height: 80px;
         z-index: 1;
         width: 100%;
-        max-width: 1300px;
+        max-width: 100%;
         padding: 0;
     }
     .navbar__menu {
@@ -403,7 +403,7 @@ img {
         opacity: 1;
         transition: all 0.5s ease;
         z-index: 99;
-        height: 50vh;
+        height: 80vh;
         font-size: 1.6rem;
     }
     #navbar__logo {
@@ -414,7 +414,7 @@ img {
         height: 3px;
         margin: 5px auto;
         transition: all 0.3s ease-in-out;
-        background: #fff;
+        background: rgba(255, 255, 255, 0);
     }
     .navbar__item {
         width: 100%;
@@ -428,12 +428,12 @@ img {
     .navbar__btn {
         padding-bottom: 2rem;
     }
-    .button {
+    button {
         display: flex;
         justify-content: center;
         align-items: center;
-        width: 80%;
-        height: 80px;
+        width: 50%;
+        height: 50px;
         margin: 0;
     }
     #mobile-menu {
@@ -447,7 +447,7 @@ img {
         cursor: pointer;
     }
     #mobile-menu.is-active .bar:nth-child(2) {
-        opacity: 0;
+        opacity: 1;
     }
     #mobile-menu.is-active .bar:nth-child(1) {
         transform: translateY(8px) rotate(45deg);
@@ -514,10 +514,10 @@ img {
     font-size: 9vw;
     margin-top: 25px;
     background-size: 100%;
-    /* -webkit-background-clip: text;
-  -moz-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  -moz-text-fill-color: transparent; */
+    -webkit-background-clip: text;
+    -moz-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    -moz-text-fill-color: transparent;
 }
 
 .main__content h2 {
