--- a/contact_us/contact.css
+++ b/contact_us/contact.css
@@ -295,7 +295,7 @@ footer {
 }
 
 .website__rights {
-    color: #fff;
+    color: #feef3c;
     padding-right: 50px;
 }
 
@@ -317,243 +317,124 @@ footer {
     }
 }
 
-*,
-*:before,
-*:after {
-    box-sizing: border-box;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-}
-
-
-/* body {
-    background: linear-gradient(to right, #1b1b1c 0%, #feef3c 100%);
-    font-size: 12px;
-} */
-
-body,
-button,
-input {
-    font-family: 'Righteous', sans-serif;
-    font-weight: 700;
-    letter-spacing: 1.4px;
-}
-
-.background {
-    display: flex;
-    min-height: 80vh;
-}
-
-.container {
-    flex: 0 1 700px;
-    margin: auto;
-    padding: 10px;
-}
-
-.screen {
-    position: relative;
-    background: #3e3e3e;
-    border-radius: 15px;
-}
-
-.screen:after {
-    content: '';
-    display: block;
-    position: absolute;
-    top: 0;
-    left: 20px;
-    right: 20px;
-    bottom: 0;
-    border-radius: 15px;
-    box-shadow: 0 20px 40px rgba(0, 0, 0, .4);
-    z-index: -1;
-}
-
-.screen-header {
-    display: flex;
-    align-items: center;
-    padding: 10px 20px;
-    background: #4d4d4f;
-    border-top-left-radius: 15px;
-    border-top-right-radius: 15px;
-}
-
-.screen-header-left {
-    margin-right: auto;
-}
-
-.screen-header-button {
-    display: inline-block;
-    width: 8px;
-    height: 8px;
-    margin-right: 3px;
-    border-radius: 8px;
-    background: white;
-}
-
-.screen-header-button.close {
-    background: #ed1c6f;
-}
-
-.screen-header-button.maximize {
-    background: #e8e925;
-}
-
-.screen-header-button.minimize {
-    background: #74c54f;
-}
-
-.screen-header-right {
-    display: flex;
-}
-
-.screen-header-ellipsis {
-    width: 3px;
-    height: 3px;
-    margin-left: 2px;
-    border-radius: 8px;
-    background: #999;
-}
-
-.screen-body {
-    display: flex;
-}
-
-.screen-body-item {
-    flex: 1;
-    padding: 50px;
-}
-
-.screen-body-item.left {
-    display: flex;
-    flex-direction: column;
-}
-
-.app-title {
-    display: flex;
-    flex-direction: column;
-    position: relative;
-    color: #feef3c;
-    font-size: 36px;
-}
-
-.app-title:after {
-    content: '';
-    display: block;
-    position: absolute;
-    left: 0;
-    bottom: -10px;
-    width: 25px;
-    height: 4px;
-    background: #eeeeee;
-}
-
-.app-contact {
-    margin-top: 100px;
-    font-size: 18px;
-    color: #888;
-    display: flex;
-}
-
-.app-contact ul {
-    display: flex;
-}
-
-.app-form-group {
-    margin-bottom: 15px;
-}
-
-.app-form-group.message {
-    margin-top: 40px;
-}
-
-.app-form-group.buttons {
-    margin-bottom: 0;
-    text-align: right;
-}
-
-.app-form-control {
+#last {
     width: 100%;
-    padding: 10px 0;
-    background: none;
-    border: none;
-    border-bottom: 1px solid #666;
-    color: #ddd;
-    font-size: 14px;
-    text-transform: uppercase;
-    outline: none;
-    transition: border-color .2s;
-}
-
-.app-form-control::placeholder {
-    color: #666;
-}
-
-.app-form-control:focus {
-    border-bottom-color: #ddd;
-}
-
-.app-form-button {
-    background: none;
-    border: none;
-    color: #fff;
-    font-size: 24px;
-    cursor: pointer;
-    outline: none;
-}
-
-.app-form-button:hover {
-    color: #feef3c;
-}
-
-.credits {
-    display: flex;
+    height: auto;
     justify-content: center;
-    align-items: center;
-    margin-top: 20px;
-    color: #ffa4bd;
-    font-family: 'Roboto Condensed', sans-serif;
-    font-size: 16px;
-    font-weight: normal;
+    background-color: #1b1b1b;
 }
 
-.credits-link {
-    display: flex;
-    align-items: center;
-    color: #fff;
-    font-weight: bold;
-    text-decoration: none;
+.full {
+    width: 80%;
+    display: inline-block;
+    margin: 2%;
+    margin-left: 10%;
+    text-align: center;
+    background-color: #100f0f;
+    color: white;
+    border: 15px solid #feef3c;
+    border-radius: 5px;
+    margin-bottom: 8%;
+    margin-top: 8%;
 }
 
-.dribbble {
-    width: 20px;
-    height: 20px;
-    margin: 0 5px;
+.full h3 {
+    font-size: 2rem;
+    display: block;
+    margin: 2%;
+    margin-bottom: 0;
 }
 
-@media screen and (max-width: 520px) {
-    .screen-body {
-        flex-direction: column;
+.lt {
+    padding: 2%;
+    margin: 2%;
+}
+
+.rt {
+    padding: 2%;
+    margin: 2%;
+}
+
+.lt textarea {
+    width: 94%;
+    margin-left: 2.8%;
+}
+
+button {
+    margin: 2%;
+}
+
+.btn-primary {
+    background-color: black;
+    border-radius: 5%;
+}
+
+.btn-primary:hover {
+    background-color: #feef3c;
+    color: #100f0f;
+}
+
+.list-item {
+    margin-bottom: 2%;
+    list-style-type: none;
+}
+
+.list-item span {
+    margin-left: 10px;
+    font-size: 1.4rem;
+}
+
+.list-item a {
+    color: white;
+    display: inline-block;
+}
+
+.list-item a:hover {
+    text-decoration: underline;
+}
+
+.form-control {
+    background-color: black;
+}
+
+@media screen and (min-width: 770px) {
+    .full {
+        width: 70%;
+        margin-left: 15%;
     }
-    .screen-body-item.left {
-        margin-bottom: 30px;
-    }
-    .app-title {
-        flex-direction: row;
-    }
-    .app-title span {
-        margin-right: 12px;
-    }
-    .app-title:after {
-        display: none;
+    .lt textarea {
+        width: 95%;
+        margin-left: 2.4%;
     }
 }
 
-@media screen and (max-width: 600px) {
-    .screen-body {
-        padding: 40px;
+@media screen and (min-width: 1100px) {
+    .full {
+        width: 65%;
+        margin-left: 17%;
+        margin-top: 5%;
     }
-    .screen-body-item {
-        padding: 0;
+    .lt {
+        width: 55%;
+        display: inline-block;
+        float: left;
+        margin-right: 0;
+    }
+    .rt {
+        width: 35%;
+        display: inline-block;
+        margin-left: 0;
+    }
+    .list-item {
+        margin-bottom: 10%;
+    }
+    .contact-list {
+        margin-top: 22%;
+        padding-right: 8%;
+    }
+    .fa-envelope,
+    .gmail {
+        display: inline-block;
+        width: auto;
     }
 }
